--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<div class="text-opacity"><strong>
 
 						<p aling="justify"><strong>
-						Soy Técnico Ocupacional en Seguridad Industrial, egresada del Instituto Técnico del petróleo de Barrancabermeja. Durante mi vida profesional he desarrollado capacidades que me han permitido tener un excelente desempeño laboral, teniendo gran experiencia en actividades como Manejo de Personal, Gestión para le elaboración de Permisos de Trabajo, Manejo de archivos y rendimiento de informes, socialización de Capacitaciones y Charlas de seguridad además de los conocimientos en Primeros Auxilios, Manejo Defensivo y de Extintores.</strong>
+						Soy Técnico Ocupacional en Seguridad Industrial, egresada del Instituto Técnico del petróleo de Barrancabermeja. Durante mi vida profesional he desarrollado capacidades que me han permitido tener un excelente desempeño laboral, teniendo gran experiencia en actividades como Manejo de Personal, Gestión para le elaboración de Permisos de Trabajo, Manejo de archivos y rendimiento de informes, socialización de Capacitaciones y Charlas de seguridad, además de los conocimientos en Primeros Auxilios, Manejo Defensivo y de Extintores.</strong>
 					</p>
 
 					 </div>
