--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<section class="bg-portafolio" >
 			<div class="container">
 				<div id="sobremi" class="text-center col-xs-12">
-						<h2 class="text-black"><strong>Mi Perfil</strong></h2>
+						<h2 class="text-black"><strong>MI PERFIL</strong></h2>
 					<div class="line-white"></div>
 					<div class="text-opacity"><strong>
 
@@ -56,7 +56,7 @@
 					</p>
 
 					 </div>
-					<br> <h2> OBJETIVO PROFESIONAL </h2></br>
+					<br> <h2> Objetivo Profesional</h2></br>
 					<h4> Desempeñar funciones de gran responsabilidad aplicando mis conocimientos como Técnica Ocupacional en Seguridad Industrial, permitiendo así un alto grado de desarrollo profesional y personal en las diferentes áreas de un entorno laboral con los principios de lealtad y compromiso.</h4>
 				</div>
 			</div>
@@ -64,7 +64,7 @@
 		<!--servicios-->
 		<section id="servicios" class="servicios text-center">
 			<div class="container">
-				<h2>Servicios</h2>
+				<h2>SERVICIOS</h2>
 				<div class="line"></div>
 				<div class="row">
 					<div class="col-xs-12 col-md-3">
