--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 						Soy Técnico Ocupacional en Seguridad Industrial, egresada del Instituto Técnico del petróleo de Barrancabermeja. Durante mi vida profesional he desarrollado capacidades que me han permitido tener un excelente desempeño laboral, teniendo gran experiencia en actividades como Manejo de Personal, Gestión para le elaboración de Permisos de Trabajo, Manejo de archivos y rendimiento de informes, socialización de Capacitaciones y Charlas de seguridad, además de los conocimientos en Primeros Auxilios, Manejo Defensivo y de Extintores.</strong>
 					</p>					
 					 </div>
-					<br> <h2> Objetivo Profesional</h2></br>
-					<h4> Desempeñar funciones de gran responsabilidad aplicando mis conocimientos como Técnica Ocupacional en Seguridad Industrial, permitiendo así un alto grado de desarrollo profesional y personal en las diferentes áreas de un entorno laboral con los principios de lealtad y compromiso.</h4>
+					<br><h2><strong> Objetivo Profesional</h2></br></strong>
+					<h3> Desempeñar funciones de gran responsabilidad aplicando mis conocimientos como Técnica Ocupacional en Seguridad Industrial, permitiendo así un alto grado de desarrollo profesional y personal en las diferentes áreas de un entorno laboral con los principios de lealtad y compromiso.</h3>
 				</div>
 			</div>
 		</section>
