--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<!--servicios-->
 		<section id="servicios" class="servicios text-center">
 			<div class="container">
-				<h2>SERVICIOS</h2>
+				<h2>Servicios</h2>
 				<div class="line"></div>
 				<div class="row">
 					<div class="col-xs-12 col-md-3">
