--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<div class="tipos-servicios">
 							<a href="#"><i class="fa fa-diamond icon text-portafolio"></i></a>
 							<h3>Capacitación en Primeros Auxilios </h3><br>
-							<p>Los Primero Auxilios aplicados correctamente pueden ser, incluso, la diferencia entre la vida y la muerte de la persona involucrada,  que bien podría ser un ser querido muy cercano a nosotros.  Un accidente,  que en principio no es fatal,  puede transformarse en un grave riesgo para la vida,  si no es atendido correctamente y a tiempo </p></br>
+							<p>Los PrimeroS Auxilios aplicados correctamente pueden ser, incluso, la diferencia entre la vida y la muerte de la persona involucrada, que bien podría ser un ser querido muy cercano a nosotros. Un accidente, que en principio no es fatal, puede transformarse en un grave riesgo para la vida,  si no es atendido correctamente y a tiempo. </p></br>
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-3">
