--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
 						<div class="tipos-servicios">
 							<a href="#"><i class="fa fa-diamond icon text-portafolio"></i></a>
 							<h3>Capacitación en Primeros Auxilios </h3><br>
-							<p>Los PrimeroS Auxilios aplicados correctamente pueden ser, incluso, la diferencia entre la vida y la muerte de la persona involucrada, que bien podría ser un ser querido muy cercano a nosotros. Un accidente, que en principio no es fatal, puede transformarse en un grave riesgo para la vida,  si no es atendido correctamente y a tiempo. </p></br>
+							<p>Los Primeros Auxilios aplicados correctamente pueden ser, incluso, la diferencia entre la vida y la muerte de la persona involucrada, que bien podría ser un ser querido muy cercano a nosotros. Un accidente, que en principio no es fatal, puede transformarse en un grave riesgo para la vida,  si no es atendido correctamente y a tiempo. </p></br>
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-3">
 						<div class="tipos-servicios">
 							<a href="#"><i class="fa fa-paper-plane icon text-portafolio"></i></a>
 							<h3>Capacitación Manejo de Extintores</h3><br>
-							<p> </p></br>
+							<p>Sabemos cuán importante es la formación en la lucha contra incendios, ya que forman una pieza fundamental dentro de la estrategia de prevención de riesgos laborales en una empresa y por ello, trabajamos día a día para perfeccionar nuestros cursos y capacitar de este modo a todas las personas para que conozcan los pasos a seguir en caso de conato de incendio.</p></br>
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-3">
