--- a/index.html
+++ b/index.html
@@ -47,16 +47,17 @@
 		<section class="bg-portafolio" >
 			<div class="container">
 				<div id="sobremi" class="text-center col-xs-12">
-						<h2 class="text-black"><strong>MI PERFIL</strong></h2>
+						<h2 class="text-black"><strong>Mi Perfil</strong></h2>
 					<div class="line-white"></div>
 					<div class="text-opacity"><strong>
 
 						<p aling="justify"><strong>
-						Soy Técnico Ocupacional en Seguridad Industrial, egresada del Instituto Técnico del petróleo de Barrancabermeja. Durante mi vida profesional he desarrollado capacidades que me han permitido tener un excelente desempeño laboral, teniendo gran experiencia en actividades como Manejo de Personal, Gestión para le elaboración de Permisos de Trabajo, Manejo de archivos y rendimiento de informes, socialización de Capacitaciones y Charlas de seguridad, además de los conocimientos en Primeros Auxilios, Manejo Defensivo y de Extintores.</strong>
-					</p>					
+						Soy Técnico Ocupacional en Seguridad Industrial, egresada del Instituto Técnico del petróleo de Barrancabermeja. Durante mi vida profesional he desarrollado capacidades que me han permitido tener un excelente desempeño laboral, teniendo gran experiencia en actividades como Manejo de Personal, Gestión para le elaboración de Permisos de Trabajo, Manejo de archivos y rendimiento de informes, socialización de Capacitaciones y Charlas de seguridad además de los conocimientos en Primeros Auxilios, Manejo Defensivo y de Extintores.</strong>
+					</p>
+
 					 </div>
-					<br><h2><strong> Objetivo Profesional</h2></br></strong>
-					<h3> Desempeñar funciones de gran responsabilidad aplicando mis conocimientos como Técnica Ocupacional en Seguridad Industrial, permitiendo así un alto grado de desarrollo profesional y personal en las diferentes áreas de un entorno laboral con los principios de lealtad y compromiso.</h3>
+					<br> <h2> OBJETIVO PROFESIONAL </h2></br>
+					<h4> Desempeñar funciones de gran responsabilidad aplicando mis conocimientos como Técnica Ocupacional en Seguridad Industrial, permitiendo así un alto grado de desarrollo profesional y personal en las diferentes áreas de un entorno laboral con los principios de lealtad y compromiso.</h4>
 				</div>
 			</div>
 		</section>
@@ -70,14 +71,14 @@
 						<div class="tipos-servicios">
 							<a href="#"><i class="fa fa-diamond icon text-portafolio"></i></a>
 							<h3>Capacitación en Primeros Auxilios </h3><br>
-							<p>Los Primeros Auxilios aplicados correctamente pueden ser, incluso, la diferencia entre la vida y la muerte de la persona involucrada, que bien podría ser un ser querido muy cercano a nosotros. Un accidente, que en principio no es fatal, puede transformarse en un grave riesgo para la vida,  si no es atendido correctamente y a tiempo. </p></br>
+							<p> </p></br>
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-3">
 						<div class="tipos-servicios">
 							<a href="#"><i class="fa fa-paper-plane icon text-portafolio"></i></a>
 							<h3>Capacitación Manejo de Extintores</h3><br>
-							<p>Sabemos cuán importante es la formación en la lucha contra incendios, ya que forman una pieza fundamental dentro de la estrategia de prevención de riesgos laborales en una empresa y por ello, trabajamos día a día para perfeccionar nuestros cursos y capacitar de este modo a todas las personas para que conozcan los pasos a seguir en caso de conato de incendio.</p></br>
+							<p> </p></br>
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-3">
