--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 							<h3>Trabajo en Alturas con Andamios Certificados</h3>
 						</div>
 					</div>
-				<div class="row">
+				
 					<div class="col-md-4 overlay no-p">
 						<img src="img/21.jpg" class="img">
 						<div class="newcategory">
@@ -163,7 +163,7 @@
 							<h3>Punto Ecológico para la Clasifiación de Residuos Solidos</h3>
 						</div>
 					</div>
-				<div class="row">
+				
 					<div class="col-md-4 overlay no-p">
 						<img src="img/22.jpg" class="img">
 						<div class="newcategory">
@@ -171,6 +171,7 @@
 							<h3>Atención de Primeros Auxilios</h3>
 						</div>
 					</div>
+				</div>
 
 		</section>
 		<footer id="contactanos">
