--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
 			<div class="conteiner-fluid">
 				<div class="row">
 					<div class="col-md-4 overlay no-p">
-						<img src="img/10.jpg" class="img">
+						<img src="img/10.JPG" class="img">
 						<div class="newcategory">
 							<h4>Proyecto</h4>
 							<h3>Ampliación Estación Compresora de Gas Vasconia - 2010</h3>
 						</div>
 					</div>
 					<div class="col-md-4 overlay no-p">
-						<img src="img/11.jpg" class="img">
+						<img src="img/11.JPG" class="img">
 						<div class="newcategory">
 							<h4>Proyecto</h4>
 							<h3>Construcción de Encerramiento Perimetral para las Unidades de Bombeo - Campo Velásquez - 2012</h3>
 						</div>
 					</div>
 					<div class="col-md-4 overlay no-p">
-						<img src="img/24.jpg" class="img">
+						<img src="img/24.JPG" class="img">
 						<div class="newcategory">
 							<h4>Proyecto</h4>
 							<h3>Construción de Tanque para almacenamiento de 40.000 Bls de Crudo - Planta Vasconia</h3>
@@ -126,21 +126,21 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4 overlay no-p">
-						<img src="img/16.jpg" class="img">
+						<img src="img/16.JPG" class="img">
 						<div class="newcategory">
 							<h4>HSEQ</h4>
 							<h3>Ejercicios de Calistenia</h3>
 						</div>
 					</div>
 					<div class="col-md-4 overlay no-p">
-						<img src="img/15.jpg" class="img">
+						<img src="img/15.JPG" class="img">
 						<div class="newcategory">
 							<h4>Proyecto</h4>
 							<h3>Izaje de tuberia de 20" para el Montaje de la linea de Succión Y descarga entre el HUB Vasconia y la Estación Compresora de Gasa Vasconia</h3>
 						</div>
 					</div>
 					<div class="col-md-4 overlay no-p">
-						<img src="img/12.jpg" class="img">
+						<img src="img/12.JPG" class="img">
 						<div class="newcategory">
 							<h4>HSEQ</h4>
 							<h3>Acompañamiento y Supervisión Hseq</h3>
@@ -157,7 +157,7 @@
 					</div>
 				
 					<div class="col-md-4 overlay no-p">
-						<img src="img/21.jpg" class="img">
+						<img src="img/21.JPG" class="img">
 						<div class="newcategory">
 							<h4>HSEQ</h4>
 							<h3>Punto Ecológico para la Clasifiación de Residuos Solidos</h3>
@@ -165,7 +165,7 @@
 					</div>
 				
 					<div class="col-md-4 overlay no-p">
-						<img src="img/22.jpg" class="img">
+						<img src="img/22.JPG" class="img">
 						<div class="newcategory">
 							<h4>HSEQ</h4>
 							<h3>Atención de Primeros Auxilios</h3>
