--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<div class="tipos-servicios">
 							<a href="#"><i class="fa fa-paper-plane icon text-portafolio"></i></a>
 							<h3>Capacitación Manejo de Extintores</h3><br>
-							<p> </p></br>
+							<p> </p>Los extintores cumplen una función de vital importancia en un plan de acción contra conatos de incendios, siendo estos los primeros elementos que se usan para intentar controlarlo, de ahí la importancia de aprender qué es un extintor, cúal es su uso "cuándo, cómo, por qué",  recarga, ubicación adecuada y clases de extintores, ya que forman una pieza fundamental dentro de la estrategia de prevención de riesgos laborales de una empresa que debe saber una persona.</br>
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-3">
