--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<div class="tipos-servicios">
 							<a href="#"><i class="fa fa-diamond icon text-portafolio"></i></a>
 							<h3>Capacitación en Primeros Auxilios </h3><br>
-							<p> </p></br>
+							<p> </p>El objetivo de los primeros auxilios es conservar la vida, evitar mayores complicaciones, ayudar en la recuperación de la persona y asegurar su traslado a un centro de salud. Por tal motivo la  Ley de Prevención de Riesgos Laborales contempla que las empresas deben de tener organizado un plan de emergencia, así como tener formados a los empleados para aplicar los primeros auxilios cuando éstos sean necesarios en la atención de accidentados. Es por eso que es fundamental que cualquier ciudadano tenga un mínimo de conocimientos acerca de conceptos básicos de primeros auxilios, ya que la mayoría de accidentes ocurren cuando menos lo esperas y su resolución depende de lo que ocurra en los primeros minutos, hasta la llegada de un profesional.</br>
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-3">
