--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 						<img src="img/21.JPG" class="img">
 						<div class="newcategory">
 							<h4>HSEQ</h4>
-							<h3>Punto Ecológico para la Clasifiación de Residuos Solidos</h3>
+							<h3>Punto Ecológico para la Clasificación de Residuos Sólidos</h3>
 						</div>
 					</div>
 				
